# HRCOS82_PROJECT6_2015

./: README.md
code/AUMobile/: bower.json  config.xml  config.xml~  ionic.project  package.json  package.json~
code/AUMobile/www/: index.html  index.html~
code/AuComparator/DatabaseLabels/: CK_EMOTIONS.csv
code/AuComparator/Output/: CKPLUS_Emotions.txt  CKPLUS_FacsAU.txt  CK_FacsAU.txt  Emo2AU_Complex.txt  Emo2AU_Simple.txt  FACSStats_Complex.txt  FACSStats_Simple.txt
code/aumobile_server/: auserver.py~  img.html  server.py  tes.jpg~  test.py  test.py~
code/cnn/: AU_CNN_evaluate.py  AU_CNN_evaluate_single.py  AU_CNN_train.py  AU_evalute.sh  AU_training.sh  BP4D-training_training_test_split.csv  README  data_preprocessing.sh  datasetConfigParser.py  install_cuda  performVerification.py  single_run
code/cnn/data_pre_processing/: BP4D-training_training_test_split.csv  auUtils.py  check_files.py  cohn-kanade-images_training_test_split.csv  cohn-kanade_images_training_test_split.csv  face_detect.py  face_detect_single.py  generate_csv.py  generate_dataset_trainng_test_split_csv.py  generate_resolution_datasets.py  (+2 more)
code/svm/: CMakeLists.txt  README  README.md
code/svm/src/: CMakeLists.txt
code/svm/src/dataset/: .project  CMakeLists.txt  CaptureME.py  auUtils.py  createBp4dCsv.py  createCKEmotionsCSV.py  createCKEmotionsCSV.sh  cropFaces.py  dataset.cfg  datasetConfigParser.py  datasetFill.py  datasetFillCsv.py  datasetInit.py  dataset_parse_au.cfg  findWhichAUsHangOut.py  parseAU.py  performTraining.py  performVerification.py  processFeatures.py  processPrepTrain.py
code/svm/src/dataset/BP4D-african/: BP4D-african.csv  dataset_bp_au_24.cfg  dataset_bp_au_32.cfg  dataset_bp_au_48.cfg  train_BP4D-african.sh
code/svm/src/dataset/BP4D-asian/: BP4D-asian.csv  dataset_bp_au_24.cfg  dataset_bp_au_32.cfg  dataset_bp_au_48.cfg  train_BP4D-asian.sh
code/svm/src/dataset/BP4D-caucasian/: BP4D-caucasian.csv  dataset_bp_au_24.cfg  dataset_bp_au_32.cfg  dataset_bp_au_48.cfg  train_BP4D-caucasian.sh
code/svm/src/dataset/BP4D-female/: BP4D-female.csv  dataset_bp_au_24.cfg  dataset_bp_au_32.cfg  dataset_bp_au_48.cfg  train_BP4D-female.sh
code/svm/src/dataset/BP4D-full/: BP4D-full.csv  dataset_bp_au_16.cfg  dataset_bp_au_2.cfg  dataset_bp_au_24.cfg  dataset_bp_au_32.cfg  dataset_bp_au_4.cfg  dataset_bp_au_40.cfg  dataset_bp_au_48.cfg  dataset_bp_au_56.cfg  dataset_bp_au_8.cfg  train_BP4D-full.sh
code/svm/src/dataset/BP4D-male/: BP4D-male.csv  dataset_bp_au_24.cfg  dataset_bp_au_32.cfg  dataset_bp_au_48.cfg  train_BP4D-male.sh
code/svm/src/dataset/CK-au/: cohn-kanade-images_training_test_split.csv  dataset_ck_au_24.cfg  dataset_ck_au_32.cfg  dataset_ck_au_48.cfg  train_ck_au_csv.sh
code/svm/src/dataset/CK-emo/: CKEmoTrain.csv  dataset_ck_emo_12.cfg  dataset_ck_emo_24.cfg  dataset_ck_emo_32.cfg  dataset_ck_emo_48.cfg  train_ck_emo.sh
code/svm/src/dataset/create_BP4D_image_sets/: README.txt  bp4f_asian.cfg  bp4f_caucasian.cfg  bp4f_female.cfg  bp4f_full.cfg  bp4f_male.cfg  create_BP4D_db_sets.sh
code/svm/src/dataset/predictAU/: ReadMe,txt  dataset_parse_au.cfg
code/svm/src/dataset/predictAU/classifierData/classifiers/svm/: AU10_vs_NotAU10_feats.xml  AU12_vs_NotAU12_feats.xml  AU14_vs_NotAU14_feats.xml  AU15_vs_NotAU15_feats.xml  AU17_vs_NotAU17_feats.xml  AU1_vs_NotAU1_feats.xml  AU23_vs_NotAU23_feats.xml  AU2_vs_NotAU2_feats.xml  AU4_vs_NotAU4_feats.xml  AU6_vs_NotAU6_feats.xml  AU7_vs_NotAU7_feats.xml
code/svm/src/detector/: BoostGenDetector.cpp  BoostGenDetector.h  CMakeLists.txt  ConfusionMatrix.cpp  ConfusionMatrix.h  ConfusionMatrix.h~  GenDetector.cpp  GenDetector.cpp~  GenDetector.h  SVMGenDetector.cpp  SVMGenDetector.h  au_detector_cli.cpp
code/svm/src/facedetector/: FaceDetector.cpp  FaceDetector.h  facecrop_cli.cpp
code/svm/src/gaborbank/: CMakeLists.txt  GaborBank.cpp  GaborBank.h  GaborKernel.h  gaborbank_cli.cpp
code/svm/src/training/: AdaBoostClassifier.cpp  AdaBoostClassifier.h  CMakeLists.txt  Classifier.cpp  Classifier.h  FacePreProcessor.cpp  FacePreProcessor.h  SVMClassifier.cpp  SVMClassifier.h  TrainingParameters.h  train_cli.cpp
code/svm/src/utils/: matrix_io.cpp  matrix_io.h  string_utils.cpp  string_utils.h
(+18 files in other folders)
